[package]
name = "rheed_stream"
version = "0.1.0"
edition = "2021"

[lib]
name = "rheed_stream"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
numpy = "0.26"
anyhow = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] } # async only
bytes = "1.6"
zarrs = { version = "0.21", features = ["zstd"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }   
serde = "1"
